# lpsolve-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/lp/lp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/c_src/: lp_utils.c
app/src/main/cpp/java_src/: lpsolve5j.cpp
app/src/main/java/lp/lp/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/lp/lp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
